Added Schema For Xml to Restrict Specific Xml Structure.

--- a/SpecName/SpecName.csproj
+++ b/SpecName/SpecName.csproj
@@ -48,6 +48,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Books.xsd">
+      <SubType>Designer</SubType>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Books.xml">
